# corporate-finance

./: Cargo.toml  README.md
.github/workflows/: publish.yml
src/: lib.rs  main.rs  prelude.rs
src/ratios/: mod.rs  risk_metrics.rs
