[package]
name = "corp-fin"
version = "0.1.0"
edition = "2024"
description = "A specialized library for corporate finance calculations, including Beta, Sharpe Ratio, and Risk Metrics."
license = "MIT"
repository = "https://github.com/abhinandh-s/corporate-finance"
documentation = "https://docs.rs/corp-fin"
keywords = ["finance", "economics", "risk", "metrics"]
categories = ["science", "mathematics"]

[features]
default = []

[dependencies]

